--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.4.0",
     "stripe": "^9.10.0"
   },
